@startuml

skinparam linetype ortho
skinparam ranksep 200
left to right direction

package persistence.model #LightBlue/LightGoldenRodYellow {
    enum Status {
        +  SIGNED
        +  PENDING
        +  IN_PROGRESS
        +  CANCELED
        +  REJECTED
        - String statusString
        - <<Create>> Status(statusString: String)
        + String getStatusString()
    }
    class OneTimePassword {
        - UUID id
        - Long timestamp
        - String otp
        - String secret
    }
    class Document {
        - UUID id
        - String filePath
        - String fileName
        - Long addedOn
        - String signedFilePath
        - String signedFileName
    }
    class StatusConverter {
        + String convertToDatabaseColumn(status: Status)
        + Status convertToEntityAttribute(code: String)
    }
    class SigningSession {
        - UUID id
        - UUID userId
        - int otpAttempts
        - int signAttempts
        - Long suspendedUntil
        - Boolean consent
        - Status status
        + <<Create>> SigningSession(id: UUID)
    }
}

Document "1" --> "1\nsigningSession" SigningSession : >
SigningSession "1" --> "1\ndocument" Document: >
OneTimePassword "1" --> "1\nsigningSession" SigningSession : >
SigningSession "1" --> "1\noneTimePassword" OneTimePassword : >
javax.persistence.AttributeConverter <|.. StatusConverter

@enduml